--- a/statics/css/styles.css
+++ b/statics/css/styles.css
@@ -11573,10 +11573,16 @@ html {
   background: linear-gradient(135deg, #1e30f3 0%, #e21e80 100%);
 }
 
-.text-gradient {
+.text-gradient, .text-gradient-footer {
   background: -webkit-linear-gradient(315deg, #1e30f3 0%, #e21e80 100%);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
+}
+
+@media (max-width: 763px) {
+  .text-gradient-footer {
+    font-size: 1rem;
+  }
 }
 
 .rounded-4 {
@@ -11745,4 +11751,27 @@ html {
     width: 1.5vw;
     left: -2vw;
   }
+}
+
+.dwn-btn {}
+
+.dwn-btn-sm {
+  font-size: 0.85rem;
+}
+
+@media (max-width: 763px) {
+  .dwn-btn {
+    display: none;
+  }
+}
+
+@media (min-width: 764px) {
+  .dwn-btn-sm {
+    display: none;
+  }
+}
+
+.proj-card {
+  font-size: 0.75rem;
+  text-align: justify;
 }
